./gradlew tidy